syntax = "proto3";
package zetachain.zetacore.emissions;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/emissions/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  string validator_emission_percentage = 5;
  string observer_emission_percentage = 6;
  string tss_signer_emission_percentage = 7;
  string observer_slash_amount = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  int64 ballot_maturity_blocks = 10;
  string block_reward_amount = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  // not used. do not edit.
  reserved 1 to 4;
  reserved 8;
}

// Deprecated: Do not use. Use Params.
message LegacyParams {
  option (gogoproto.goproto_stringer) = false;
  string max_bond_factor = 1;
  string min_bond_factor = 2;
  string avg_block_time = 3;
  string target_bond_ratio = 4;
  string validator_emission_percentage = 5;
  string observer_emission_percentage = 6;
  string tss_signer_emission_percentage = 7;
  string duration_factor_constant = 8;
  string observer_slash_amount = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  int64 ballot_maturity_blocks = 10;
}
